[gd_scene load_steps=20 format=2]

[ext_resource path="res://SPRITES_GODOT/inimeigospritesheet.png" type="Texture" id=1]
[ext_resource path="res://ShootingEnemy.gd" type="Script" id=2]
[ext_resource path="res://SPRITES_GODOT/enemy_death_spritesheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 41, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 41, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 82, 41, 41 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 41, 82, 41, 41 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 50, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 100, 50, 50 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "enemy_death",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "shooting",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 13.7065 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5.36932, 5.70713 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 13.75 )

[sub_resource type="CircleShape2D" id=16]
radius = 104.012

[node name="ShootingEnemy" type="KinematicBody2D" groups=[
"Enemy",
]]
position = Vector2( -0.396851, -0.793701 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.33669, -1.91273 )
frames = SubResource( 7 )
animation = "enemy_death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.50674, 4.41174 )
shape = SubResource( 1 )

[node name="Head" type="Area2D" parent="."]
position = Vector2( -2.97227, -17.8301 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2( 0.445953, 3.41897 )
shape = SubResource( 8 )

[node name="Body" type="Area2D" parent="."]
position = Vector2( 184.139, -65.8771 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( -186.25, 70.25 )
shape = SubResource( 9 )

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 16 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
